--- a/index.html
+++ b/index.html
@@ -12,53 +12,56 @@
     <div class="mainDev">
         <div class="header">
             <h1 class="title">SEI Connect Four</h1>
+            <h3 class="turns">Player 1's turn</h3>
         </div>
-    <div class="container">
-        <div divIndex = "0" id="grid"></div>
-        <div divIndex = "1" id="grid"></div>
-        <div divIndex = "2" id="grid"></div>
-        <div divIndex = "3" id="grid"></div>
-        <div divIndex = "4" id="grid"></div>
-        <div divIndex = "5" id="grid"></div>
-        <div divIndex = "6" id="grid"></div>
-        <div divIndex = "7" id="grid"></div>
-        <div divIndex = "8" id="grid"></div>
-        <div divIndex = "9" id="grid"></div>
-        <div divIndex = "10" id="grid"></div>
-        <div divIndex = "11" id="grid"></div>
-        <div divIndex = "12" id="grid"></div>
-        <div divIndex = "13" id="grid"></div>
-        <div divIndex = "14" id="grid"></div>
-        <div divIndex = "15" id="grid"></div>
-        <div divIndex = "16" id="grid"></div>
-        <div divIndex = "17" id="grid"></div>
-        <div divIndex = "18" id="grid"></div>
-        <div divIndex = "19" id="grid"></div>
-        <div divIndex = "20" id="grid"></div>
-        <div divIndex = "21" id="grid"></div>
-        <div divIndex = "22" id="grid"></div>
-        <div divIndex = "23" id="grid"></div>
-        <div divIndex = "24" id="grid"></div>
-        <div divIndex = "25" id="grid"></div>
-        <div divIndex = "26" id="grid"></div>
-        <div divIndex = "27" id="grid"></div>
-        <div divIndex = "28" id="grid"></div>
-        <div divIndex = "29" id="grid"></div>
-        <div divIndex = "30" id="grid"></div>
-        <div divIndex = "31" id="grid"></div>
-        <div divIndex = "32" id="grid"></div>
-        <div divIndex = "33" id="grid"></div>
-        <div divIndex = "34" id="grid"></div>
-        <div divIndex = "35" id="grid"></div>
-        <div divIndex = "36" id="grid"></div>
-        <div divIndex = "37" id="grid"></div>
-        <div divIndex = "38" id="grid"></div>
-        <div divIndex = "39" id="grid"></div>
-        <div divIndex = "40" id="grid"></div>
-        <div divIndex = "41" id="grid"></div>
-        <div divIndex = "42" id="grid"></div>
+        <div class="container">
+            <!-- <img src="./images/green_circle.png" /> -->
+            <div divIndex = "0" id="grid"></div>
+            <div divIndex = "1" id="grid"></div>
+            <div divIndex = "2" id="grid"></div>
+            <div divIndex = "3" id="grid"></div>
+            <div divIndex = "4" id="grid"></div>
+            <div divIndex = "5" id="grid"></div>
+            <div divIndex = "6" id="grid"></div>
+            <div divIndex = "7" id="grid"></div>
+            <div divIndex = "8" id="grid"></div>
+            <div divIndex = "9" id="grid"></div>
+            <div divIndex = "10" id="grid"></div>
+            <div divIndex = "11" id="grid"></div>
+            <div divIndex = "12" id="grid"></div>
+            <div divIndex = "13" id="grid"></div>
+            <div divIndex = "14" id="grid"></div>
+            <div divIndex = "15" id="grid"></div>
+            <div divIndex = "16" id="grid"></div>
+            <div divIndex = "17" id="grid"></div>
+            <div divIndex = "18" id="grid"></div>
+            <div divIndex = "19" id="grid"></div>
+            <div divIndex = "20" id="grid"></div>
+            <div divIndex = "21" id="grid"></div>
+            <div divIndex = "22" id="grid"></div>
+            <div divIndex = "23" id="grid"></div>
+            <div divIndex = "24" id="grid"></div>
+            <div divIndex = "25" id="grid"></div>
+            <div divIndex = "26" id="grid"></div>
+            <div divIndex = "27" id="grid"></div>
+            <div divIndex = "28" id="grid"></div>
+            <div divIndex = "29" id="grid"></div>
+            <div divIndex = "30" id="grid"></div>
+            <div divIndex = "31" id="grid"></div>
+            <div divIndex = "32" id="grid"></div>
+            <div divIndex = "33" id="grid"></div>
+            <div divIndex = "34" id="grid"></div>
+            <div divIndex = "35" id="grid"></div>
+            <div divIndex = "36" id="grid"></div>
+            <div divIndex = "37" id="grid"></div>
+            <div divIndex = "38" id="grid"></div>
+            <div divIndex = "39" id="grid"></div>
+            <div divIndex = "40" id="grid"></div>
+            <div divIndex = "41" id="grid"></div>
+            </div>
+        <div class="indicator">
+            <p class="winner">Who wins?</p>
         </div>
-    
     </div>
 </body>
 </html>
