started over, used a loop to create the divs, might be simpler to code, fingers crossed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <script defer src="./script.js"></script>
-    <title>Document</title>
+    <title>Connect 4</title>
 </head>
 <body>
     <div class="mainDev">
@@ -15,8 +15,16 @@
             <h3 class="turns">Player 1's turn</h3>
         </div>
         <div class="container">
-            <!-- <img src="./images/green_circle.png" /> -->
-            <div divIndex = "0" id="grid"></div>
+            </div>
+        <div class="indicator">
+            <p class="winner">Who wins?</p>
+            <button>Reset</button>
+        </div>
+    </div>
+</body>
+</html>
+ <!-- <img src="./images/green_circle.png" /> -->
+            <!-- <div divIndex = "0" id="grid"></div>
             <div divIndex = "1" id="grid"></div>
             <div divIndex = "2" id="grid"></div>
             <div divIndex = "3" id="grid"></div>
@@ -57,11 +65,4 @@
             <div divIndex = "38" id="grid"></div>
             <div divIndex = "39" id="grid"></div>
             <div divIndex = "40" id="grid"></div>
-            <div divIndex = "41" id="grid"></div>
-            </div>
-        <div class="indicator">
-            <p class="winner">Who wins?</p>
-        </div>
-    </div>
-</body>
-</html>
+            <div divIndex = "41" id="grid"></div> -->
